@@ -3,7 +3,6 @@ OS9 - Find a build box
 Fix The Timing/ Speed up/ slow down/ pause [speed in jmlib]
 Command-line named pattern
 Keyboard shortcuts
-Downloads go to someplace more betterer - OSX friendly?
 Rewrite file handling code in "print" function, finish mpeg support
 
 JMLib:
