@@ -3,6 +3,7 @@ Version 0.3
  - jmlib: Provide ability to describe all the builtin styles
  - aajm: modified to take advantage of new jmlib feature
  - jmdlx: modified to take advantage of new jmlib feature
+ - jmdlx: Modified download locations
  - jmlib: Added "Random" style. Thanks to Barton Chittenden for the
     [ridiculously simple if I'd taken two minutes to think about it]
     pseudocode
